feat(代理模式): 新增三种代理类型具体示例
- 新增 StaticProxyExample.java：静态代理，手动编写 LoggingOrderProxy
- 新增 JdkDynamicProxyExample.java：JDK 动态代理，InvocationHandler 统一拦截
- 新增 CglibProxyExample.java：CGLIB 动态代理，字节码生成子类无需接口
- pom.xml 新增 cglib:cglib:3.3.0 依赖
- 更新 proxy/index.md：展开三种代理类型为独立子节，各附代码示例与对比说明

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>